package com.hellofood.backend.service;

import com.hellofood.backend.domain.order.Order;
import com.hellofood.backend.domain.order.Order.OrderStatus;
import com.hellofood.backend.domain.order.OrderProcessLog;

import com.hellofood.backend.dto.order.OrderResponseDto;
import com.hellofood.backend.repository.OrderProcessLogRepository;
import com.hellofood.backend.repository.OrderRepository;

import jakarta.persistence.EntityNotFoundException;
import lombok.RequiredArgsConstructor;

import java.time.LocalDateTime;
import java.util.Comparator;
import java.util.List;
import java.util.stream.Collectors;

import org.springframework.stereotype.Service;
import org.springframework.transaction.annotation.Transactional;

@Service
@Transactional
@RequiredArgsConstructor
public class StaffOrderService {

    private final OrderRepository orderRepository;
    private final OrderProcessLogRepository orderProcessLogRepository;
    private final com.hellofood.backend.repository.StaffRepository staffRepository;
    private final AccessControlService accessControlService;

    // OrderPcoressLog에서 해당 주문의 최신 상태(담당직원, 시각)를 찾는 메소드
    private OrderProcessLog findLatestLogByStatus(List<OrderProcessLog> logs, OrderStatus status) {
        if (logs == null || logs.isEmpty())
            return null;
        return logs.stream()
                .filter(log -> log.getStatus() == status)
                .max(Comparator.comparing(OrderProcessLog::getProcessTime))
                .orElse(null);
    }

    // Status 기반 주문 조회
    public List<OrderResponseDto> getOrders(OrderStatus status) {
        List<Order> orders;

        // 1. 파라미터로 넘어온 status가 있으면 그걸로 검색, 없으면 전체 검색
        if (status == null) {
            orders = orderRepository.findAllWithLogs(); // 전체 조회
        } else {
            orders = orderRepository.findByStatusWithLogs(status); // 상태별 조회
        }

        // 2. 조회된 주문 엔티티(Order)들을 응답용 DTO(OrderResponseDto)로 변환
        return orders.stream()
                .map(order -> {
                    OrderProcessLog readyLog = findLatestLogByStatus(order.getProcessLogs(), OrderStatus.READY);
                    OrderProcessLog inProgressLog = findLatestLogByStatus(order.getProcessLogs(),
                            OrderStatus.INPROGRESS);
                    OrderProcessLog deliveredLog = findLatestLogByStatus(order.getProcessLogs(), OrderStatus.DELIVERED);

                    Long staffId = null;
                    LocalDateTime readyTime = null;
                    String staffName = null;

                    if (readyLog != null) {
                        staffId = readyLog.getStaffId();
                        readyTime = readyLog.getProcessTime();
                    } else if (inProgressLog != null) {
                        staffId = inProgressLog.getStaffId();
                    }

                    if (staffId != null) {
                        staffName = staffRepository.findById(staffId)
                                .map(com.hellofood.backend.domain.user.User::getName)
                                .orElse("Unknown Staff");
                    }

                    // [Added] Delivery Staff Info Logic
                    Long deliveryStaffId = null;
                    LocalDateTime actualDeliveryTime = null;
                    String deliveryStaffName = null;

                    if (deliveredLog != null) {
                        deliveryStaffId = deliveredLog.getStaffId();
                        actualDeliveryTime = deliveredLog.getProcessTime();

                        if (deliveryStaffId != null) {
                            deliveryStaffName = staffRepository.findById(deliveryStaffId)
                                    .map(com.hellofood.backend.domain.user.User::getName)
                                    .orElse("Unknown Delivery Staff");
                        }
                    }

                    // 3. 추출된 정보를 DTO 생성자로 전달
                    return new OrderResponseDto(order, staffId, readyTime, staffName, deliveryStaffId,
                            actualDeliveryTime, deliveryStaffName);
                })
                .collect(Collectors.toList());
    }

    // 주문 상태 업데이트
    public void updateStatus(Long orderId, OrderStatus newStatus) {
        Order order = orderRepository.findById(orderId)
                .orElseThrow(() -> new IllegalArgumentException("주문 없음"));

        // 유효성 검사 (옵션): 이미 배달 완료된걸 다시 요리중으로 못 바꾸게 막기 등
        // if (order.getStatus() == OrderStatus.COMPLETED) throw ...

        order.setStatus(newStatus);

        // (확장 기능) 만약 상태가 '배달중'으로 바뀌면 고객에게 알림(SMS/Push) 보내기 로직 추가
    }

    // 새로 추가한 이력 관리 함수
    public void updateStatusAndAudit(Long orderId, OrderStatus newStatus, Long staffId, String staffRole) {

        Order order = orderRepository.findById(orderId)
                .orElseThrow(() -> new EntityNotFoundException("Order not found."));

        // 1. 직원 엔티티 조회 (다형성 활용을 위해 실제 객체 필요)
        com.hellofood.backend.domain.user.Staff staff = staffRepository.findById(staffId)
                .map(user -> (com.hellofood.backend.domain.user.Staff) user) // Staff로 캐스팅
                .orElseThrow(() -> new EntityNotFoundException("Staff not found with id: " + staffId));

        // 2. 역할 검증 (RBAC) - AccessControlService 위임
        // 이제 문자열(role)이 아니라 객체(staff)를 넘깁니다.
        accessControlService.verifyStaffAccess(newStatus, staff);

        order.setStatus(newStatus);
        orderRepository.save(order);

        OrderProcessLog log = new OrderProcessLog(
                order,
                newStatus,
                staffId,
                LocalDateTime.now(), // 현재 시각 기록
                staffRole);

        // 💡 로그 엔티티 저장
        orderProcessLogRepository.save(log);
    }
}